@@ -64,6 +64,10 @@ struct BOOST_WAVE_DECL chlit_grammar_gen {
 }   //  namespace wave 
 }   //  namespace boost
 
+#ifdef BOOST_MSVC
+#pragma warning(pop)
+#endif
+
 // the suffix header occurs after all of the code
 #ifdef BOOST_HAS_ABI_HEADERS
 #include BOOST_ABI_SUFFIX
