@@ -1,4 +1,4 @@
-/* Generated by re2c 0.9.10 on Sun Nov 20 20:57:27 2005 */
+/* Generated by re2c 0.9.10 on Sun Nov 27 17:15:19 2005 */
 #line 1 "strict_cpp.re"
 /*=============================================================================
     Boost.Wave: A Standard compliant C++ preprocessor library
