@@ -24,12 +24,6 @@
 #include BOOST_ABI_PREFIX
 #endif
 
-// suppress warnings about dependent classes not being exported from the dll
-#ifdef BOOST_MSVC
-#pragma warning(push)
-#pragma warning(disable : 4251 4231 4660)
-#endif
-
 ///////////////////////////////////////////////////////////////////////////////
 //  
 //  Explicit instantiation of the cpp_grammar_gen template with the correct
